--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
-img{
+body {
+  background-image: url("assets/img/bg-image.png");
+  background-size: cover;
+}
+
+#page {
+  box-sizing: border-box;
+  inline-size: 800px;
+  padding: 24px;
+  background-color: #f0e8c2;
+  border-radius: 24px;
+  margin: 48px auto;
+}
+
+img {
   border-radius: 16px;
 }
