--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  font-family: "Alice", serif;
+  line-height: 150%;
+}
+
 body {
   background-image: url("assets/img/bg-image.png");
   background-size: cover;
@@ -12,6 +22,43 @@ body {
   margin: 48px auto;
 }
 
+ul{
+  padding-left: 24px;
+}
+main{
+  padding: 24px;
+}
+
+
+section + section{
+  margin-top: 24px;
+}
+
+#about p + p{
+  margin-top: 12px;
+}
+
 img {
   border-radius: 16px;
+}
+
+h1 {
+  font-size: 40px;
+  line-height: 140%;
+  margin-bottom: 4px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h1,
+h2 {
+  color: #291b1a;
+  margin-bottom: 4px;
+  line-height: 150%;
+}
+
+p {
+  color: #573a37;
 }
