--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   padding: 24px;
   background-color: #f0e8c2;
   border-radius: 24px;
-  margin: 48px auto;
+  margin: 48px auto 28px;
 }
 
 ul{
@@ -61,4 +61,15 @@ h2 {
 
 p {
   color: #573a37;
+}
+
+
+footer{
+  color: #573A37;
+  text-align: center;
+  padding-bottom: 48px;
+}
+
+footer img{
+  vertical-align: middle;
 }
